// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render size Button 1`] = `
<button
  className="nice-btn default large"
  href={null}
  onClick={[Function]}
>
  Large
</button>
`;

exports[`<Button /> should render style Button 1`] = `
<button
  className="nice-btn primary medium"
  href={null}
  onClick={[Function]}
>
  Primary
</button>
`;

exports[`<Button /> should render style and size Button 1`] = `
<button
  className="nice-btn primary large"
  href={null}
  onClick={[Function]}
>
  Primary large
</button>
`;

exports[`<Button /> should render the Button 1`] = `
<button
  className="nice-btn default medium"
  href={null}
  onClick={[Function]}
>
  Default
</button>
`;
